--- a/index.html
+++ b/index.html
@@ -508,6 +508,13 @@
   flex: 1;
   min-height: 220px;
 }
+.form{
+  padding: 28px;
+}
+
+.form h3{
+  margin-bottom: 18px;
+}
 
     .field{ display:flex; flex-direction:column; gap:6px; margin-bottom: 12px; }
     label{ font-weight: 800; font-size: 13px; color: var(--ink); }
@@ -1511,3 +1518,4 @@
 
 </body>
 </html>
+
