--- a/index.html
+++ b/index.html
@@ -837,8 +837,7 @@
       <div class="band-inner">
         <h2>Reserva tu cita</h2>
         <p>
-          Si quieres que te asesoremos sin compromiso, deja tus datos y nos pondremos en contacto contigo.
-          (Más adelante conectaremos esta sección con el sistema de citas / subpáginas.)
+          Solicita tu cita ahora y da el primer paso para cuidarte con un enfoque médico y personalizado.
         </p>
         <a class="btn btn-primary" href="#contacto">Reservar cita</a>
       </div>
@@ -1033,7 +1032,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Equipo</h2>
-        <p>Presentación de equipo (maqueta). Luego podrás añadir biografías y fotos reales.</p>
+        <p>Conoce al equipo de profesionales que cuidará de ti.</p>
       </div>
 
       <div class="grid cards" style="grid-template-columns: repeat(2, 1fr);">
@@ -1518,3 +1517,4 @@
 
 </body>
 </html>
+
