--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
       <div class="grid contact-grid">
         <div class="card info-box">
           <h3>GEAN CLINIC, SL</h3>
-          <p class="lead">Montero Moya, 4 · 23740 Andújar (Jaén)</p>
+          <p class="lead">c/ Montero Moya, 4 · 23740 Andújar (Jaén)</p>
 
           <div class="info-list">
             <div class="info-item">
@@ -1517,4 +1517,5 @@
 
 </body>
 </html>
+
 
