--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
         <div class="fcol">
           <h4>Contacto</h4>
           <div class="flinks">
-            <a href="#contacto">Montero Moya, 4 · Andújar</a>
+            <a href="#contacto">c/ Montero Moya, 4 · Andújar</a>
             <a href="tel:+34663608898">663 608 898</a>
             <a href="mailto:geanclinica@gmail.com">geanclinica@gmail.com</a>
           </div>
@@ -1517,5 +1517,6 @@
 
 </body>
 </html>
+
 
 
