--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
 
           <div class="info-item">
             <span class="dot"></span>
-            <div class="content"><strong>Exéresis de lesiones dermatológicas (verrugas, queratosis seborreicas)</strong><br> · 30 € por procedimiento</div>
+            <div class="content"><strong>Exéresis de lesiones dermatológicas (verrugas, queratosis seborreicas)</strong><br> 30 € por procedimiento</div>
           </div>
 
           <div class="info-item">
@@ -1298,3 +1298,4 @@
   </script>
 </body>
 </html>
+
