--- a/index.html
+++ b/index.html
@@ -1025,14 +1025,14 @@
         <div class="carousel" aria-roledescription="carrusel">
           <div class="track" id="trackReviews">
             <article class="review"><div class="stars">★★★★★</div><div class="name">Bego Jurado</div><p>Trato muy cercano. Me explicaron todo con calma y me sentí tranquila desde el primer minuto.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">Daniela García 2</div><p>Resultado natural, justo lo que quería. Profesionales y muy atentos en el seguimiento.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">Toni Casanueva Bermúdez 3</div><p>Instalaciones impecables y una atención muy humana. Repetiría sin dudarlo.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">Alejandra M.P. 4</div><p>Me asesoraron con sinceridad, sin venderme de más. Eso da mucha confianza.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">David Sánchez Mercado  5</div><p>Todo muy profesional. Puntuales, claros, y el resultado ha quedado genial.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">Melani Rute 6</div><p>Excelente comunicación. Me sentí acompañada antes y después del tratamiento.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">Alfonso B.S. 7</div><p>La doctora transmite mucha seguridad. Explica muy bien y cuida los detalles.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">Silvia Martínez 8</div><p>Me encantó el enfoque médico y el resultado final. Natural y elegante.</p></article>
-            <article class="review"><div class="stars">★★★★★</div><div class="name">Julio Órdoñez 9</div><p>Muy buen trato en recepción y en consulta. Cercanía y profesionalidad.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">Daniela García</div><p>Resultado natural, justo lo que quería. Profesionales y muy atentos en el seguimiento.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">Toni Casanueva Bermúdez</div><p>Instalaciones impecables y una atención muy humana. Repetiría sin dudarlo.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">Alejandra M.P.</div><p>Me asesoraron con sinceridad, sin venderme de más. Eso da mucha confianza.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">David Sánchez Mercado</div><p>Todo muy profesional. Puntuales, claros, y el resultado ha quedado genial.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">Melani Rute</div><p>Excelente comunicación. Me sentí acompañada antes y después del tratamiento.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">Alfonso B.S.</div><p>La doctora transmite mucha seguridad. Explica muy bien y cuida los detalles.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">Silvia Martínez</div><p>Me encantó el enfoque médico y el resultado final. Natural y elegante.</p></article>
+            <article class="review"><div class="stars">★★★★★</div><div class="name">Julio Órdoñez</div><p>Muy buen trato en recepción y en consulta. Cercanía y profesionalidad.</p></article>
           </div>
         </div>
 
@@ -1430,4 +1430,5 @@
   </script>
 </body>
 </html>
+
 
